# strada-quant

./: .gitignore  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
LICENCES/: MIT.txt
cuda_src/: price_bs.cu  price_ffi.cpp
examples/: benchmark_vs_numpy.py  notebook_bs.ipynb
py-strada/: Cargo.toml
src/: lib.rs
src/bindings/: api.rs  mod.rs
src/compute/: detect.rs
src/compute/cpu/: black_scholes_cpu.rs
src/compute/gpu/: ffi.rs
src/compute/gpu/bindings/: README.md
src/core/: pricing.rs  types.rs
src/core/models/: black_scholes.rs
src/tests/: integration_gpu.rs  pricing_tests.rs
src/utils/: config.rs  math.rs
